--- a/code/dockerfile
+++ b/code/dockerfile
@@ -13,7 +13,7 @@ WORKDIR /app
 
 # Install application dependencies
 COPY package*.json /app/ 
-COPY webpack.config.js /app/ 
+COPY webpack.prod.config.js /app/ 
 COPY server.js /app/
 #RUN cd /app && ls
 
