--- a/code/package.json
+++ b/code/package.json
@@ -4,11 +4,10 @@
   "description": "Calculator",
   "main": "index.js",
   "scripts": {
-    "test": "tst\u001b[D\u001b[Dest",
-	"build": "webpack --mode production",
-	"dev": "webpack --mode development",
-	"watch": "webpack --watch --mode production"
-	
+		"test": "echo \"test\" && exit 1",
+    "build": "webpack --mode production --config webpack.prod.config.js",
+    "dev": "webpack --mode development",
+    "watch": "webpack --watch --mode development"
   },
   "repository": {
     "type": "git",
@@ -24,9 +23,6 @@
   },
   "homepage": "https://github.com/buccaneer33/lecture_10#readme",
   "devDependencies": {
-    "webpack-dev-server": "^3.1.4"
-  },
-  "dependencies": {
     "autoprefixer": "^8.6.2",
     "font-loader": "^0.1.2",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
@@ -39,19 +35,22 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^1.1.11",
-    "got": "^8.3.1",
+    "style-loader": "^0.21.0",
+    "raw-loader": "^0.5.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
-    "node-static": "^0.7.10",
     "postcss": "^6.0.22",
     "postcss-loader": "^2.1.5",
     "precss": "^3.1.2",
-    "raw-loader": "^0.5.1",
-    "sass": "^1.6.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.4.0",
-    "webpack-command": "^0.2.1"
+    "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+   "got": "^8.3.1",
+   "node-static": "^0.7.10",
+   "webpack": "^4.4.0",
+	 "sass": "^1.6.0",
+   "webpack-command": "^0.2.1"
   }
 }
