--- a/code/package.json
+++ b/code/package.json
@@ -5,18 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"test\" && exit 1",
-    "build:prod": "webpack --mode production --config webpack.prod.config.js",
-    "build:dev": "webpack --mode development --config webpack.config.js",
-    "build:watch": "webpack --watch --mode development --config webpack.config.js"
+    "build:prod": "webpack --mode production",
+    "build:dev": "webpack --mode development",
+    "build:watch": "webpack --watch --mode development"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/buccaneer33/lecture_10.git"
   },
-	"browserslist": [
-    "> 1%",
-    "last 12 versions"
-  ],
   "keywords": [
     "Calculator"
   ],
