--- a/code/package.json
+++ b/code/package.json
@@ -42,15 +42,16 @@
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "webpack-dev-server": "^3.1.4",
-		"postcss": "^6.0.22",
+    "postcss": "^6.0.22",
     "postcss-loader": "^2.1.5",
     "precss": "^3.1.2"
   },
   "dependencies": {
     "got": "^8.3.1",
     "node-static": "^0.7.10",
-    "webpack": "^4.4.0",
     "sass": "^1.6.0",
-    "webpack-command": "^0.2.1"
+    "webpack": "^4.4.0",
+    "webpack-command": "^0.2.1",
+    "ws": "^6.0.0"
   }
 }
